# voxink

./: .gitignore  README.md  pyproject.toml  start_daemon.sh
src/: audio.py  config.py  hotkey.py  injector.py  llm.py  main.py  stt.py
